RESOLVED FIXED189889
Ensure PointerEvent is not visible when disabled
https://bugs.webkit.org/show_bug.cgi?id=189889
Summary Ensure PointerEvent is not visible when disabled
Dean Jackson
Reported 2018-09-22 15:30:00 PDT
Ensure PointerEvent is not visible when disabled
Attachments
Patch (4.10 KB, patch)
2018-09-22 15:34 PDT, Dean Jackson
no flags
Archive of layout-test-results from ews100 for mac-sierra (2.33 MB, application/zip)
2018-09-22 16:44 PDT, EWS Watchlist
no flags
Archive of layout-test-results from ews112 for mac-sierra (3.03 MB, application/zip)
2018-09-22 17:37 PDT, EWS Watchlist
no flags
Archive of layout-test-results from ews115 for mac-sierra (3.07 MB, application/zip)
2018-09-22 19:39 PDT, EWS Watchlist
no flags
Patch (4.10 KB, patch)
2018-09-22 21:50 PDT, Dean Jackson
eric.carlson: review+
Radar WebKit Bug Importer
Comment 1 2018-09-22 15:30:45 PDT
Dean Jackson
Comment 2 2018-09-22 15:34:57 PDT
EWS Watchlist
Comment 3 2018-09-22 16:43:59 PDT
Comment on attachment 350535 [details] Patch Attachment 350535 [details] did not pass mac-ews (mac): Output: https://webkit-queues.webkit.org/results/9314900 New failing tests: imported/w3c/web-platform-tests/pointerevents/pointerevent_constructor.html imported/w3c/web-platform-tests/pointerevents/extension/pointerevent_constructor.html
EWS Watchlist
Comment 4 2018-09-22 16:44:01 PDT
Created attachment 350538 [details] Archive of layout-test-results from ews100 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews100 Port: mac-sierra Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 5 2018-09-22 17:37:02 PDT
Comment on attachment 350535 [details] Patch Attachment 350535 [details] did not pass mac-debug-ews (mac): Output: https://webkit-queues.webkit.org/results/9315044 New failing tests: imported/w3c/web-platform-tests/pointerevents/pointerevent_constructor.html imported/w3c/web-platform-tests/pointerevents/extension/pointerevent_constructor.html
EWS Watchlist
Comment 6 2018-09-22 17:37:04 PDT
Created attachment 350539 [details] Archive of layout-test-results from ews112 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews112 Port: mac-sierra Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 7 2018-09-22 19:39:39 PDT
Comment on attachment 350535 [details] Patch Attachment 350535 [details] did not pass mac-debug-ews (mac): Output: https://webkit-queues.webkit.org/results/9315648 New failing tests: imported/w3c/web-platform-tests/pointerevents/pointerevent_constructor.html imported/w3c/web-platform-tests/pointerevents/extension/pointerevent_constructor.html
EWS Watchlist
Comment 8 2018-09-22 19:39:41 PDT
Created attachment 350544 [details] Archive of layout-test-results from ews115 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews115 Port: mac-sierra Platform: Mac OS X 10.12.6
Dean Jackson
Comment 9 2018-09-22 21:50:37 PDT
Eric Carlson
Comment 10 2018-09-24 10:00:16 PDT
Comment on attachment 350550 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=350550&action=review > LayoutTests/pointerevents/disabled.html:7 > + output.textContent = window.PointerEvent + ""; Nit: a template literal might make this slightly easier to understand: `${window.PointerEvent}`
Dean Jackson
Comment 11 2018-09-24 10:35:53 PDT
Note You need to log in before you can comment on or make changes to this bug.