Ensure PointerEvent is not visible when disabled https://bugs.webkit.org/show_bug.cgi?id=189889 <rdar://problem/44708253>

Reviewed by Eric Carlson.

Source/WebCore:

Test: pointerevents/disabled.html

* bindings/js/WebCoreBuiltinNames.h: Now that it is enabled at runtime, it needs
a built-in name.
* dom/PointerEvent.idl: Add EnabledAtRuntime.

LayoutTests:

A test that explicitly disables PointerEvents and checks
that the interface is not visible.

* pointerevents/disabled-expected.html: Added.
* pointerevents/disabled.html: Added.

Canonical link: https://commits.webkit.org/204862@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@236410 268f45cc-cd09-0410-ab3c-d52691b4dbfc